--- a/src/app/pages/mobile-box/home/home.page.scss
+++ b/src/app/pages/mobile-box/home/home.page.scss
@@ -1,5 +1,9 @@
 @import "../../../../global";
 
+
+@import "/src/global.scss";
+
+
 .btn-container{
   position: fixed;
   bottom: 1.25rem;
@@ -57,18 +61,11 @@
 }
 //Section Verwertung
 
-.verwertung-background-img{
-  width: 100%;
-  height: 30rem;
-  position: absolute;
-  object-fit: cover;
-  filter: brightness(80%)
-}
 .box-verwertung{
   //background-image: url("../assets/phones.webp") ;
   display: flex;
-  flex-direction: column;
-  margin: 1.25rem;
+  //flex-direction: column;
+  margin: 1rem;
   color: white;
   border-radius: 35px;
   padding: 2.5rem;
@@ -94,26 +91,16 @@
   margin-bottom: 2rem !important;
 }
 
+
 .box-v1 {
-@extend .box-verwertung;
-  background-color:  #1D4314;
-
-}
-
-.box-v2 {
   @extend .box-verwertung;
   background-color:  #B1A31D;
 }
 
-.box-v3 {
+.box-v2 {
   @extend .box-verwertung;
   background-color:  #0A9AA4;
 
-}
-
-.box-v4 {
-  @extend .box-verwertung;
-  background-color:  #A4380A;
 }
 
 ///Dark Mode
@@ -126,11 +113,35 @@
   }
 }
 
+//ADJUSTMENTS DESKTOP VERSION
+
+  @media(min-width: 782px) {
+    //header subtext
+    .only-on-mobile {
+      display: none;
+    }
+    .desktop-version{
+      display: block;
+    }
+
+    .row-spenden {
+      margin-bottom: 4rem;
+
+    }
+  }
+
+//Verwertung
+
+.section-text-white{
+  @extend .section-text;
+  color: white;
+}
+
 //ADJUSTMENTS MOBILE VERSION
 
 
-@media(max-width: 780px) {
-  //header subtext
+@media(max-width: 990px) {
+  //General, now: header subtext
   .only-on-mobile {
     display: block;
   }
@@ -152,27 +163,22 @@
 
   }
 
+  //Section Spenden & Sammeln mobile
+
   .section-sammeln ion-col:nth-of-type(2){
+    order: -1;
+  }
+
+  //Verwertung Section mobile
+
+  .box-v2 ion-col:nth-of-type(2){
     order: -1;
   }
 
 }
 
-//ADJUSTMENTS DESKTOP VERSION
 
-  @media(min-width: 782px) {
-    //header subtext
-    .only-on-mobile {
-      display: none;
-    }
-    .desktop-version{
-      display: block;
-    }
 
-    .row-spenden {
-      margin-bottom: 4rem;
 
-    }
-  }
 
 
