--- a/src/global.scss
+++ b/src/global.scss
@@ -351,6 +351,7 @@ ion-select::part(text) {
   filter: brightness(80%);
 }
 
+
 .header-image-circle {
   color: $colorPrimary;
   position: relative;
@@ -525,8 +526,8 @@ ion-select::part(text) {
 // Box-Image-Text
 
 .box-group {
-  margin-top: 2.5rem !important;
-  margin-bottom: 5rem !important;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .box {
@@ -677,6 +678,25 @@ ion-select::part(text) {
   padding: 2rem;
 }
 
+.spenden-sammeln-section-container {
+  background-color: rgba(230,230,230,0.3);
+  padding: 2rem 0;
+}
+
+#section-verwertung{
+  position:relative;
+  padding-bottom: 2rem;
+}
+
+.section-background-image {
+  position: absolute;
+  object-fit: cover;
+  //filter: brightness(80%);
+  width: 100%;
+  height: 100%;
+
+}
+
 @media screen and (min-width: 0px) and (max-width: 920px) {
   .blog-section-container {
     padding-left: 0rem;
@@ -706,6 +726,12 @@ ion-select::part(text) {
   text-align: center;
   justify-items: center;
   align-content: center;
+  align-self: center;
+  justify-content: center;
+}
+
+section-image-container img{
+
 }
 
 .section-image {
@@ -764,6 +790,37 @@ ion-select::part(text) {
   text-align: left;
 }
 
+section-title-center {
+  text-align: center;
+  color: white;
+  font-size: 2rem;
+  font-weight: 500;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-text-centered{
+  /* verwertung Das passiert mit deinen alten Handys */
+
+  font-style: normal;
+  font-size: 26px;
+  line-height: 40px;
+  text-align: center;
+  padding: 2rem 3rem;
+
+  color: #FFFFFF;
+
+}
+.section-text-centered h3{
+  /* verwertung Das passiert mit deinen alten Handys */
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 54px;
+  text-transform: uppercase;
+}
+
 .section-verwertung{
   margin-bottom: auto;
   display: flex;
@@ -783,6 +840,15 @@ ion-select::part(text) {
     margin-left: auto;
     margin-right: auto;
     text-align: left;
+  }
+
+  .section-text-centered{
+    font-size: large;
+
+  }
+
+  .section-text-centered h3{
+    font-size: larger;
   }
 }
 
@@ -1096,7 +1162,7 @@ ion-select::part(text) {
 .button-orange-rev {
   font-size: 1.5rem;
   color: $colorCopper;
-  background: white;
+  background: transparent;
   display: block;
   width: auto;
   //margin: 0.5rem 1rem 0.5rem 1rem !important;
@@ -1182,10 +1248,12 @@ ion-select::part(text) {
   // MENU
 
 
-  .menu-vertical-text-selected {
+   .menu-vertical-text-selected {
     @extend .menu-vertical-text;
     text-decoration: underline;
   }
+
+
 
   .menu-vertical-text:hover {
     text-decoration: underline;
